# vector-font-autoencoder

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/vector_font_autoencoder/: predict.py  train.py
src/vector_font_autoencoder/datasets/: lit_data_module.py
src/vector_font_autoencoder/models/: lit_module.py  module.py  optim.py
src/vector_font_autoencoder/utils/: visualize.py
src/vector_font_disentanglement/: board.py  predict.py  train.py
src/vector_font_disentanglement/datasets/: lit_data_module.py
src/vector_font_disentanglement/models/: lit_module.py  module.py
src/vector_font_disentanglement/utils/: pen.py  visualize.py
